[gd_scene load_steps=2 format=3 uid="uid://dqlmoql40e1yo"]

[ext_resource type="Script" path="res://scenes/gameplay/result/result.gd" id="1_result"]

[node name="Result" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_result")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="MainLayout" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MainLayout"]
layout_mode = 2

[node name="TopSection" type="CenterContainer" parent="MainLayout/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="ResultTitle" type="Label" parent="MainLayout/VBoxContainer/TopSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 48
text = "UI_RESULT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MiddleSection" type="HBoxContainer" parent="MainLayout/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="VBoxContainer" parent="MainLayout/VBoxContainer/MiddleSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="GradeLabel" type="Label" parent="MainLayout/VBoxContainer/MiddleSection/LeftPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 120
text = "P"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RateLabel" type="Label" parent="MainLayout/VBoxContainer/MiddleSection/LeftPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 36
text = "Rate: 95.50%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightPanel" type="VBoxContainer" parent="MainLayout/VBoxContainer/MiddleSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="JudgementTitle" type="Label" parent="MainLayout/VBoxContainer/MiddleSection/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Judgement"
horizontal_alignment = 1

[node name="UltimateLabel" type="Label" parent="MainLayout/VBoxContainer/MiddleSection/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Ultimate: 0"
horizontal_alignment = 1

[node name="PerfectLabel" type="Label" parent="MainLayout/VBoxContainer/MiddleSection/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Perfect: 0"
horizontal_alignment = 1

[node name="GreatLabel" type="Label" parent="MainLayout/VBoxContainer/MiddleSection/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Great: 0"
horizontal_alignment = 1

[node name="GoodLabel" type="Label" parent="MainLayout/VBoxContainer/MiddleSection/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Good: 0"
horizontal_alignment = 1

[node name="MissLabel" type="Label" parent="MainLayout/VBoxContainer/MiddleSection/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Miss: 0"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MainLayout/VBoxContainer/MiddleSection/RightPanel"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="FastSlowTitle" type="Label" parent="MainLayout/VBoxContainer/MiddleSection/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Timing"
horizontal_alignment = 1

[node name="FastLabel" type="Label" parent="MainLayout/VBoxContainer/MiddleSection/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Fast: 0"
horizontal_alignment = 1

[node name="SlowLabel" type="Label" parent="MainLayout/VBoxContainer/MiddleSection/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Slow: 0"
horizontal_alignment = 1

[node name="BottomSection" type="CenterContainer" parent="MainLayout/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="PressAnyKeyLabel" type="Label" parent="MainLayout/VBoxContainer/BottomSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 24
text = "UI_PRESS_ANY_KEY"
horizontal_alignment = 1
vertical_alignment = 1
